# fuzzy-octo-doodle

./: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  create_submission.py  model_calls.py  pyproject.toml  utils.py  verify_model.py  visualise_dataset.ipynb
submission/: STUDENT_ID.py  __init__.py  fashion_model.py  fashion_training.py  model_weights.pth
